# Accountant2.0

./: .env.example  .gitignore  CLAUDE.md  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml
auth-service/: Dockerfile  pyproject.toml
auth-service/alembic/: env.py
auth-service/alembic/versions/: c1d2e3f4a5b6_create_users.py
auth-service/app/: main.py
auth-service/app/api/: dependencies.py
auth-service/app/api/endpoints/: auth.py
auth-service/app/core/: config.py  exceptions.py  security.py
auth-service/app/db/: redis.py  session.py
auth-service/app/models/: user.py
auth-service/app/repositories/: user.py
auth-service/app/schemas/: auth.py
auth-service/app/services/: auth_service.py
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 91434a2320ee_initial_request_history_tracked_inns_.py  a1b2c3d4e5f6_add_last_raw_response_to_tracked_inns.py  b2c3d4e5f6a7_add_pending_fields_to_tracked_inns.py  c2d3e4f5a6b7_add_user_id_to_tracked_inns_and_history.py  d3e4f5a6b7c8_drop_inn_unique_constraint.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/core/: config.py  exceptions.py  logging.py
backend/app/db/: redis.py  session.py
backend/app/models/: __init__.py  request_history.py  tracked_inn.py  tracking_change.py
backend/app/repositories/: request_history.py  tracked_inn.py  tracking_change.py
backend/app/schemas/: history.py  inn.py  tracking.py
backend/app/services/: docx_generator.py  egrul_client.py  egrul_parser.py  inn_service.py  scheduler.py  tracking_service.py
backend/tests/: conftest.py  test_egrul_client.py  test_egrul_parser.py  test_tracking_service.py
frontend/: index.html  (+1 more)
(+13 files in other folders)
