[project]
name = "accountant2-backend"
version = "0.1.0"
description = "Accountant2 Backend Service"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis>=5.2.0",
    "hiredis>=3.0.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.6.0",
    "docxtpl>=0.19.0",
    "num2words>=0.5.14",
    "apscheduler>=3.10.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
